fixed locations so that when pulled it is readable
fixed locations so that when pulled it is readable

--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ transition: all 0.3s; }
 
 .bg { 
   /* The image used */
-  background-image: url('/imgs/bg.png');
+  background-image: url('../imgs/bg.png');
 
   /* Full height */
   height: 100%; 
